--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html>
 <head>
 <title>Site NSI</title>
+<link rel="stylesheet" href="styles2.css">
+<script src="script.js"></script> 
 </head>
 <body>
 
 <h1>Les pâtes</h1>
-<p id="i2">Penne</p>
+<p id='i2'>Farfalle</p>
+
+<img src="image/1.png" alt="farfalles" width="300">
 <br>
-<br>
-<a href="3.html" class="link">-> La page 3</a>
+<button onclick="pop()">Click me</button>
+<p>(mot de passe: CAFE) </p> 
 </body>
 </html> 
