--- a/2.html
+++ b/2.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
 <html>
 <head>
-<title>Site NSI</title>
+<title>Site NSI 2</title>
 <link rel="stylesheet" href="styles2.css">
 <script src="script.js"></script> 
 </head>
